--- a/src/PetaPoco.NetCore/project.json
+++ b/src/PetaPoco.NetCore/project.json
@@ -1,20 +1,20 @@
 ﻿{
   "packOptions": {
-    "summary": "PetaPoco.NetCore is a fork of PetaPoco based, add .netcore support,In. Netcore, support for mysql,sqlserver",
-    "tags": [ "orm", "sql", "micro-orm" ],
+    "summary": "PetaPoco.NetCore is a fork of PetaPoco based, add .netcore support,support .netframework and .netcore,petapoco is A high performance Micro-ORM on dotnet supporting SQL Server, MySQL, Sqlite, SqlCE, Firebird etc,support a query and map,and support Multi Mapping, Multiple Results",
+    "tags": [ "PetaPoco", "PetaPoco.NetCore", "orm", "sql", "micro-orm" ],
     "owners": [ "hoping" ],
-    "releaseNotes": "http://stackexchange.github.io/dapper-dot-net/",
-    "projectUrl": "https://github.com/StackExchange/dapper-dot-net",
+    "releaseNotes": "https://github.com/qingask/PetaPoco.NetCore",
+    "projectUrl": "https://github.com/qingask/PetaPoco.NetCore",
     "licenseUrl": "http://www.apache.org/licenses/LICENSE-2.0",
     "repository": {
       "type": "git",
-      "url": "https://github.com/StackExchange/dapper-dot-net"
+      "url": "https://github.com/qingask/PetaPoco.NetCore"
     }
   },
   "version": "1.0.0-*",
   "authors": [ "hoping" ],
-  "description": "A high performance Micro-ORM on dotnet supporting SQL Server, MySQL, Sqlite, SqlCE, Firebird etc ",
-  "title": "PetaPoco NetCore or  dotnet",
+  "description": "PetaPoco.NetCore is a fork of PetaPoco based, add .netcore support,support .netframework and .netcore,petapoco is A high performance Micro-ORM on dotnet supporting SQL Server, MySQL, Sqlite, SqlCE, Firebird etc,support a query and map,and support Multi Mapping, Multiple Results",
+  "title": "PetaPoco.NetCore",
   "copyright": "2016 hoping, Inc.",
   "buildOptions": {
     "xmlDoc": true,
